welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: ';' expected but 'return' found.
if (a>=30 && a<=40) && (b>=30 && b<=40) return true
                                        ^in3050:3: error: ';' expected but 'return' found.
if (a>=40 && a<=50) && (b>=40 && b<=50) return true
                                        ^